# GraphicsEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
include/OpenGLRendererAPI/: OpenGLShaderInjector.h
include/RendererAPI/: BaseUniforms.h  Camera.h  Context.h  Mesh.h  Model.h  RawMesh.h  Renderer.h  RendererFactory.h  Texture.h  Transformation.h
include/cglm/: affine-mat.h  cam.h  euler.h  mat2.h  mat3.h  mat4.h  project.h  quat.h
include/cglm/simd/: intrin.h
include/cglm/struct/: cam.h  project.h
include/glad/: glad.h
src/: Camera.c  Glad.c  InputController.c  InputController.h  Main.c  MouseInputState.h  Window.c  Window.h  WindowInputController.c  WindowInputController.h  glad.c  main.c
src/Renderer/: Renderer.c  Renderer.h  RendererFactory.c  RendererFactory.h
src/Renderer/OpenGL/: OpenGLContext.c  OpenGLContext.h  OpenGLErrorHandling.c  OpenGLErrorHandling.h  OpenGLHeaders.h  OpenGLMacros.h  OpenGLMeshRenderer.c  OpenGLMeshRenderer.h  OpenGLRenderer.c  OpenGLRenderer.h  OpenGLShaderCompiler.c  OpenGLShaderRenderer.c  OpenGLShaderRenderer.h  OpenGLTextureRenderer.c  OpenGLTextureRenderer.h
src/Renderer/OpenGL/Context/: OpenGLContext.c  OpenGLContext.h
src/Renderer/OpenGL/ErrorHandling/: OpenGLErrorHandling.c
src/Renderer/OpenGL/Injector/: OpenGLInjector.c  OpenGLInjector.h  OpenGLMeshInjector.c  OpenGLShaderInjector.c  OpenGLTextureInjector.c
src/Renderer/OpenGL/RendererSegments/: OpenGLMeshRenderer.c  OpenGLMeshRenderer.h  OpenGLShaderRenderer.c  OpenGLShaderRenderer.h  OpenGLTextureRenderer.c  OpenGLTextureRenderer.h
src/Renderer/OpenGL/ShaderCompiler/: OpenGLInjector.h  OpenGLShaderCompiler.c
src/Renderer/OpenGL/Shaders/Fragment/: fragment_main.frag  fragment_wireframe.frag
src/Renderer/OpenGL/Shaders/Vertex/: vertex_main.vert  vertex_wireframe.vert
src/UtilFiles/: GeneralErrorHandling.c  GeneralErrorHandling.h  Macros.h  MacrosAndUniforms.h  OpenGLMacrosAndUniforms.h  OpenGLMacrosAndUtils.h  ReadFile.c  ReadFile.h  printMat4s.c  printMat4s.h  stb_image_implementation.c
